--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
         </div>
 
         <div id="page3">
+            <div id="page3-upper"></div>
         <img src="https://www.apple.com/v/apple-vision-pro/a/images/overview/intro/logo__4zgkuyebgtem_large.png" alt="">
 
         </div>
